@@ -1,5 +1,5 @@
 combine.networks <- function(nets, contributions, outPath, midfix="", powerVector=1:20,
-                             verbose=9, RsquaredCut=0.75, minModuleSize=5, doRemoveTOM=TRUE,
+                             verbose=1, RsquaredCut=0.75, minModuleSize=5, doRemoveTOM=TRUE,
                              datExpr){
 
     ## QC:
